@@ -39,9 +39,9 @@
 		<area condition="{dateTime}" x="80%" y="73%" width="19%" height="4%" layer="3">
 			<drawtext x="0" y="30%" align="right" font="{light}" fontsize="70%" color="{clrLightGray}" text="{dayleadingzero}.{month}.{year}      {time}" />
 		</area>
-		<area x="59%" y="96%" width="40%" height="4%" layer="3">
+		<!--<area x="59%" y="96%" width="40%" height="4%" layer="3">
 			<drawtext x="0" y="0" align="right" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="System: {cardsystem}   CAID: {caid}   Reader: {reader}   Hops: {hops}   ECM: {ecmtime}ms" />
-		</area>
+		</area>-->
 	</datetime>
 
 	<!-- Available Variables currentweather:
