@@ -18,7 +18,7 @@
 		<area condition="{hasposter}" x="0" y="46%" width="15%" height="34%" layer="1">
 			<drawimage imagetype="skinpart" path="posterReplayBG" width="{areawidth}" height="{areaheight}"/>
 		</area>
-		<area debug="true" condition="{hasposter}" x="2%" y="48%" width="{areaheight}*0.29*{posterwidth}/{posterheight}" height="29%" layer="2">
+		<area condition="{hasposter}" x="2%" y="48%" width="{areaheight}*0.29*{posterwidth}/{posterheight}" height="29%" layer="2">
 			<drawimage imagetype="image" path="{posterpath}" align="center" valign="center" width="{areawidth}" height="{areaheight}"/>
 		</area>
 	</scrapercontent>
